<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.venkateshalive.bankapplication.IntrestCalculator">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:shrinkColumns="1">

        <TableRow>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dptype"
                android:text="@string/select_deposite"
                android:gravity="right"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                >

            </Spinner>

        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_prompt"
                android:gravity="right"/>
            <EditText android:id="@+id/amount"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content">

            </EditText>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_rate_prompt"
                android:gravity="right"/>
            <EditText android:id="@+id/rate"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period_prompt"
                android:gravity="right"/>
            <EditText android:id="@+id/period"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <Button android:text="@string/button_text"
                android:layout_span="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showPayments"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intrest_prompt"
                android:gravity="right"/>
            <TextView android:id="@+id/monthly_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:gravity="left"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maturity_prompt"
                android:gravity="right"/>
            <TextView android:id="@+id/total_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:gravity="left"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
